Grafana/services.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: LoadBalancer
  loadBalancerIP: 172.199.47.170 # Sostituisci con il tuo IP pubblico
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
