Grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - asv-testmonitoring.assolombardaservizi.it   # dominio del certificato
      secretName: azure-tls                # il Secret che hai creato
  rules:
    - host: asv-testmonitoring.assolombardaservizi.it
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
